# rakuyomi

./: .coderabbit.yaml  .gitignore  .releaserc.yaml  LICENSE  README.md  build.sh  devbox.json  devenv.nix  devenv.yaml  flake.nix  pyrightconfig.json  rust-toolchain.toml  settings.json  test.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  deploy-pages.yml  test.yml
backend/: .gitignore  Cargo.toml  devbox.json  flake.nix  result  rust-toolchain.toml
backend/cbz_metadata_reader/: Cargo.toml
backend/cbz_metadata_reader/src/: main.rs
backend/cli/: Cargo.toml  build.rs
backend/cli/.sqlx/: query-0e90ad87ead632fd5dd13e37db55f80dd45af2476d9bd6c0cfc62ae0d5b190d5.json  query-2686707c2958b2b54c70c505f179a2f1b2da46f2adf75587a7f5da7632dc3962.json  query-7140266ed770b66ff003493220b1bd117e4d6647b1f988c854f0b598cef74044.json  query-e30d034e189c8b076db0f35431406ba96151b39cedf433b5b33b2991690d36c4.json
backend/cli/benches/: chapter_downloader_benchmark.rs  search_mangas_benchmark.rs
backend/cli/migrations/: 20240106202235_create_tables.sql
backend/cli/src/: chapter_downloader.rs  chapter_storage.rs  database.rs  lib.rs  main.rs  model.rs  settings.rs  source_collection.rs  source_manager.rs  util.rs
backend/lua_module/: Cargo.toml
backend/lua_module/src/: lib.rs  model.rs
backend/server/: Cargo.toml
backend/server/src/: main.rs  model.rs  source_extractor.rs  state.rs
backend/server/src/job/: download_chapter.rs  download_scanlator_chapters.rs  download_unread_chapters.rs  dto.rs  mod.rs  routes.rs  state.rs
backend/server/src/manga/: routes.rs
backend/server/src/settings/: routes.rs
backend/server/src/source/: routes.rs
backend/server/src/update/: mod.rs
backend/shared/: Cargo.toml  build.rs
backend/shared/.sqlx/: query-0ce0037460ed0882a561d6bca1d898a3928b1f8a9d08d50e21909a906c3f8607.json  query-0e9f3d27e26e7293dea2f3c5fa5deafbe6e29e5eeb4045b894bbba725228fc10.json  query-38f8e21d3b000885cfb24293c1d04af288d579c4de2b2b2fa5ae7ff2d5779fa6.json  query-43f539100a1b897090914f823e9f004b498533d19615e5563f6b5523c7ec441d.json  query-4c95df7ab5a38f330aea465e7314b2f45238741badeec4b0db17795a615128f2.json  query-55942445fa51a672988c2762d88a480b2aa6f309c4b168e2d6a34690492c0553.json  query-5f1d963ad98055a0442bfbbffa9dc63253e247a1a6870e25ab9e2abfbbf01f9b.json  query-6e73390b830e1b3844bf24d5695bb24ba634125888fd9da0b01d1638d853a8d9.json  query-8cd2059b847f6cec5a308bb5f991ee75a527e8700194fe23f4a7038fd2c107bc.json  query-94b77c8a560b91467845e5110bf3aeb6edfc48c1df35a65676c241aeb9a8e3a4.json  query-c60d9e2f0c7499d52a2f2284c07664a43da77f246224a9e7c315c3c474fd0c91.json  query-cdcecf5b7a87ff403fbd2648876508f72d5ceae64074233b89b12e637d3dcb02.json  query-e25b72b7544d648aa7d6e8f740e03796a8751d83a2409e3f8634f4fc53b560b9.json  query-fa73792f1d27e2ac099b2a40e070835230260c0908ab4a70514332c33b170474.json  query-fb7521f85043abacec7e5a5178ea769730e2c22decfb9d8d006af0ec8ff45548.json
backend/shared/benches/: chapter_downloader_benchmark.rs  search_mangas_benchmark.rs
backend/shared/migrations/: 20240106202235_create_tables.sql  20250601202635_create_manga_state_table.sql
backend/shared/src/: chapter_downloader.rs  chapter_storage.rs  database.rs  lib.rs  model.rs  source_collection.rs  source_manager.rs
backend/shared/src/cbz_metadata/: mod.rs
backend/shared/src/platform/: legacy_linux.rs  mod.rs
backend/shared/src/settings/: implementation.rs  mod.rs  schema.rs
backend/shared/src/source/: mod.rs  model.rs  wasm_store.rs
backend/shared/src/source/wasm_imports/: aidoku.rs  defaults.rs  env.rs  html.rs  json.rs  net.rs  std.rs
backend/shared/src/usecases/: add_manga_to_library.rs  check_update.rs  fetch_manga_chapter.rs  fetch_manga_chapters_in_batch.rs  get_cached_manga_chapters.rs  get_manga_library.rs  get_manga_preferred_scanlator.rs  install_source.rs  install_update.rs  list_available_sources.rs  list_installed_sources.rs  mod.rs  refresh_manga_chapters.rs  search_mangas.rs  set_manga_preferred_scanlator.rs  uninstall_source.rs  update_settings.rs
backend/uds_http_request/: Cargo.toml
backend/uds_http_request/src/: main.rs
backend/wasm_macros/: Cargo.toml
backend/wasm_macros/src/: lib.rs
backend/wasm_shared/: Cargo.toml
backend/wasm_shared/src/: lib.rs  memory_reader.rs
ci/: lua-language-server-check.py  run-e2e-tests.sh
conf/: set-env.sh  write-luarc.sh
docs/: book.toml  index.html
docs/reader-recommended-settings/: index.md
docs/src/: README.md  SUMMARY.md  quickstart.md
docs/src/contributing/: setting-up-the-environment.md
docs/src/installation/: README.md  choosing-a-build.md  installing-to-your-device.md
docs/src/reader-recommended-settings/: README.md  index.md
docs/src/user-guide/: offline-mode.md  quickstart.md
docs/theme/: book.js
e2e-tests/: .gitignore  agent.py  main.py  pyproject.toml  ui_contents.txt
e2e-tests/tests/: agent.py  conftest.py  fixtures.py  koreader_driver.py  phase_report_hook.py  test_library_view.py  test_open_chapter.py
e2e-tests/tests/queries/: __init__.py  count_listing_pages.py  describe_dialog.py  list_available_sources.py  list_mangas.py  locate_button.py
frontend/: .editorconfig  .luarc.ci.json  .luarc.json  devbox.json
frontend/rakuyomi.koplugin/: AvailableSourcesListing.lua  Backend.lua  ChapterListing.lua  DownloadUnreadChaptersJobDialog.lua  ErrorDialog.lua  Icons.lua  InstalledSourcesListing.lua  LibraryView.lua  LoadingDialog.lua  MangaReader.lua  MangaSearchResults.lua  OfflineAlertDialog.lua  Paths.lua  Platform.lua  Settings.lua  SourceSettings.lua  UpdateChecker.lua  _meta.lua  http.lua  main.lua  testing.lua
frontend/rakuyomi.koplugin/chapters/: findNextChapter.lua  findNextChapter_spec.lua
frontend/rakuyomi.koplugin/extensions/: CbzDocument.lua
frontend/rakuyomi.koplugin/handlers/: ContinueReadingHandler.lua
frontend/rakuyomi.koplugin/jobs/: DownloadChapter.lua  DownloadScanlatorChapters.lua  DownloadUnreadChapters.lua  (+1 more)
patches/: fontlist-use-bitser.patch
tools/: install-into-remote-koreader.py  prepare-sqlx-queries.sh  run-koreader-with-plugin.sh
(+41 files in other folders)
