[project]
name = "e2e-tests"
version = "0.1.0"
description = ""
authors = [
    {name = "hanatsumi",email = "hanatsumi@proton.me"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai (>=1.60.1,<2.0.0)",
    "dataclasses-jsonschema (>=2.16.0,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pyautogui (>=0.9.54,<0.10.0)",
    "pywinctl (>=0.4.1,<0.5.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
