[project]
name = "e2e-tests"
version = "0.1.0"
description = ""
authors = [
    {name = "hanatsumi",email = "hanatsumi@proton.me"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai (>=1.60.1,<2.0.0)",
    "dataclasses-jsonschema (>=2.16.0,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pyautogui (>=0.9.54,<0.10.0)",
    "pywinctl (>=0.4.1,<0.5.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-asyncio (>=0.25.3,<0.26.0)",
    "jsonformatter (>=0.3.4,<0.4.0)",
    "curlify (>=2.2.1,<3.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pyscreeze (>=1.0.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
