[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.7.3", features = ["query"] }
clap = { version = "4.4.12", features = ["derive"] }
cli = { path = "../cli" }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
