[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[build-dependencies]
regex = "1.10.4"
schemars = { version = "0.8.16", features = ["url"] }
size = "0.4.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.103"
url = { version = "2.4.0", features = ["serde"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
chrono-tz = "0.8.3"
darling = "0.20.3"
num_enum = "0.6.1"
proc-macro2 = "1.0.65"
quote = "1.0.30"
syn = { version = "2.0.26", features = ["full"] }
url = { version = "2.4.0", features = ["serde"] }
wasm_macros = { path = "../wasm_macros" }
wasm_shared = { path = "../wasm_shared" }
serde_json = "1.0.103"
scraper = "0.17.1"
ouroboros = "0.17.1"
ego-tree = "0.6.2"
html-escape = "0.2.13"
reqwest = { version = "0.11.18", default-features = false, features = ["blocking", "json", "rustls-tls"] }
zip = { version = "0.6.6", default-features = false, features = ["deflate", "bzip2"] } 
serde = { version = "1.0.193", features = ["derive"] }
scopeguard = "1.2.0"
tokio = { version = "1.35.1", features = ["full", "tracing"] }
wasmi.workspace = true
futures = "0.3.30"
rust_decimal = "1.33.1"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
thiserror = "1.0.56"
surge-ping = "0.8.0"
async-stream = "0.3.5"
tokio-util = "0.7.10"
tempfile = "3.9.0"
log = "0.4.21"
derive_more = { version = "1.0.0", features = ["from", "try_unwrap", "deref"] }
size = "0.4.1"
walkdir = "2.5.0"
regex = "1.10.4"
schemars = { version = "0.8.16", features = ["url"] }
pared = { git = "https://github.com/hanatsumi/pared.git", branch = "feat/unwrap-or-clone" }
sanitize-filename = "0.5.0"
serde_json_lenient = "0.2.3"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }

[[bench]]
name = "chapter_downloader_benchmark"
harness = false

[[bench]]
name = "search_mangas_benchmark"
harness = false
