[package]
name = "uds_http_request"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
http-body-util = "0.1.2"
hyper = { version = "1.4.1" }
hyper-util = "0.1.9"
hyperlocal = "0.9.1"
libc = "0.2.172"
log = "0.4.21"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.132"
shared = { path = "../shared" }
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = "0.7.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[features]
syscall_compatibility_shims = []
