[package]
name = "wasm_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
chrono-tz = "0.8.3"
darling = "0.20.3"
num_enum = "0.6.1"
proc-macro2 = "1.0.65"
quote = "1.0.30"
syn = { version = "2.0.26", features = ["full"] }
url = "2.4.0"
wasm_shared = { path = "../wasm_shared" }
wasmi = "0.31.1"

[lib]
proc-macro = true
